# color_print

./: .gitignore  .gitpod.yml  Cargo.toml  LICNESE_MIT.md  color_print.wai  init.sh  wapm.toml
src/: impls.rs  lib.rs  rgba.rs  utils.rs
src/resourses/: color.rs  color_print.rs  mod.rs
src/utils/: from_rgb.rs  helper.rs  mod.rs  to_rgb.rs
src/utils/types/: typedef.rs
